# notes

./: .buildinfo  .gitignore  deploy.sh  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
Contents/: arithmetic_series.html  bash.html  bibliography.html  causal_inference.html  decorators.html  docker.html  dockerfile.html  domain_generalisation.html  eigenvalues_and_eigenvectors.html  gamblers_ruin.html  generators_and_recursion.html  import_system.html  linux.html  matrix_operations.html  monads.html  nqueens.html  r_squared.html  regular_expressions.html  shannon_entropy.html  terminal_commands.html
Maths/: arithmetic_series.html  bibliography.html  causal_inference.html  eigenvalues_and_eigenvectors.html  index.html  matrix_operations.html  pythagorean_means.html  shannon_entropy.html
Notebooks/: Information_Content.html  f1_score.html  linear_regression.html  numpy_broadcasting.html  snippets.html
Programming/: bash.html  decorators.html  docker.html  dockerfile.html  generators.html  generators_and_recursion.html  import_system.html  index.html  linux.html  monads.html  nqueens.html  numpy_broadcasting.html  regular_expressions.html  terminal_commands.html
Stats/: Information_Content.html  domain_generalisation.html  f1_score.html  gamblers_ruin.html  index.html  linear_regression.html  metrics.html  r_squared.html
docs/: .buildinfo  git.html  index.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  git.doctree  index.doctree
docs/_sources/: git.rst.txt
notes/source/: conf.py  git.rst
