[tool.poetry]
name = "notes"
version = "0.1.0"
description = ""
authors = ["Alex Gregory"]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^4.4.0"
sphinx-material = "^0.0.35"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
